--- a/index.html
+++ b/index.html
@@ -6,8 +6,36 @@
     <title>Broadway</title>
   </head>
   <body>
-    <h1>Broadway Design</h1>
 
+<div class="background-image">
+  <h1>Broadway Design</h1>
+  <p>
+    <a class="page-links" href="#">Home</a>
+    <br>
+    <a class="page-links" href="#">Process</a>
+    <br>
+    <a class="page-links" href="#">Work</a>
+    <br>
+    <a class="page-links" href="#">Team</a>
+    <br>
+    <a class="page-links" href="#">Contact</a>
+  </p>
+</div>
+
+
+    <h2>Our Process</h2>
+
+    <img src="./resources/images/identify.svg" alt="">
+    <h3>Identity</h3>
+    <p>We focus on the most important details.</p>
+
+    <img src="./resources/images/understand.svg" alt="">
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.</p>
+
+    <img src="./resources/images/execute.svg" alt="">
+    <h3>Execute</h3>
+    <p>We put everything we have into our work.</p>
 
 
   </body>
