--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a class="page-links" href="#">Team</a>
     <br>
     <a class="page-links" href="#">Contact</a>
+    <br>
   </p>
 </div>
 
@@ -36,6 +37,33 @@
     <img src="./resources/images/execute.svg" alt="">
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
+
+<div class="background-image">
+  <h3>Designed in New York</h3>
+</div>
+
+  <h3>Portfolio</h3>
+  <p>Coming Soon</p>
+
+  <h3>Team</h3>
+  <p>We're Hiring!</p>
+
+  <h3>Contact</h3>
+  <p>
+    Phone: (555)-555-5555 <br>
+    E-mail: test@example.com <br>
+    Twitter: @test <br>
+  </p>
+
+<div class="footer">
+    <p>© Broadway 2017
+      <a class="page-links" href="#">Home</a>
+      <a class="page-links" href="#">Process</a>
+      <a class="page-links" href="#">Work</a>
+      <a class="page-links" href="#">Team</a>
+      <a class="page-links" href="#">Contact</a></p>
+</div>
+
 
 
   </body>
