--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
   <p>
     <a class="page-links" href="#">Home</a>
     <br>
-    <a class="page-links" href="#">Process</a>
+    <a class="page-links" href="#process">Process</a>
     <br>
-    <a class="page-links" href="#">Work</a>
+    <a class="page-links" href="#portfolio">Work</a>
     <br>
-    <a class="page-links" href="#">Team</a>
+    <a class="page-links" href="#team">Team</a>
     <br>
-    <a class="page-links" href="#">Contact</a>
+    <a class="page-links" href="#contacts">Contact</a>
     <br>
   </p>
 </div>
 
+<div id="process">
 
     <h2>Our Process</h2>
 
@@ -38,33 +39,39 @@
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
 
-<div class="background-image">
-  <h3>Designed in New York</h3>
 </div>
 
-  <h3>Portfolio</h3>
-  <p>Coming Soon</p>
 
-  <h3>Team</h3>
-  <p>We're Hiring!</p>
+<div class="background-image">
+    <h3>Designed in New York</h3>
+</div>
 
-  <h3>Contact</h3>
-  <p>
+<div id="portfolio">
+    <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+</div>
+
+<div id="team">
+    <h3>Team</h3>
+    <p>We're Hiring!</p>
+</div>
+
+<div id="contacts">
+    <h3>Contact</h3>
+    <p>
     Phone: (555)-555-5555 <br>
     E-mail: test@example.com <br>
     Twitter: @test <br>
-  </p>
+    </p>
+</div>
 
 <div class="footer">
     <p>© Broadway 2017
       <a class="page-links" href="#">Home</a>
-      <a class="page-links" href="#">Process</a>
-      <a class="page-links" href="#">Work</a>
-      <a class="page-links" href="#">Team</a>
-      <a class="page-links" href="#">Contact</a></p>
+      <a class="page-links" href="#process">Process</a>
+      <a class="page-links" href="#portfolio">Work</a>
+      <a class="page-links" href="#team">Team</a>
+      <a class="page-links" href="#contacts">Contact</a></p>
 </div>
-
-
-
   </body>
 </html>
